--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="conteudoSobre">
       <img src="imagens/perfil.png" class="imgSobre">
       <p>
-        Desenvolvedora Front End em transição de carreira. Formada em Nutrição, atualmete fazendo a formação de Desenvolvimeto Front-end na Ada Tech. Esse curso já está impulsionando meus conhecimentos, <i>networking</i> e oportunidades. Enquanto meu primeiro sim não chega, aprimoro meus conhecimentos fazendo projetos pessoais para colocar em prática o que estudo, adquirir experiência, e enriquecer meu portfólio. Onde eu pratico HTML, CSS, JavaScript, consumo de API e React. Meus <i>hobbies</i> são patinação artistica, musculação, e fazer bolinhos ✨
+        Desenvolvedora Front End em transição de carreira. Formada em Nutrição, atualmente fazendo a formação de Desenvolvimeto Front-end na Ada Tech. Esse curso já está impulsionando meus conhecimentos, <i>networking</i> e oportunidades. Enquanto meu primeiro sim não chega, aprimoro meus conhecimentos fazendo projetos pessoais para colocar em prática o que estudo, adquirir experiência, e enriquecer meu portfólio. Onde eu pratico HTML, CSS, JavaScript, consumo de API e React. Meus <i>hobbies</i> são patinação artistica, musculação, e fazer bolinhos ✨
       </p>
     </div>
   </div>
