:sparkles: feat: responsividade

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#tecnologias" class="navButtons">Tecnologias</a>
       <a href="#sobre" class="navButtons">Sobre mim</a>
       <a href="#contato" class="navButtons">Contato</a>
-      <a href="https://github.com/day-mariano" target="_blank" class="buttonProjeto">Projetos</a>
+      <a href="https://github.com/day-mariano?tab=repositories" target="_blank" class="buttonProjeto">Projetos</a>
 
     </nav>
   </header>
