:sparkles: feat: ano automático

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="imagens/programacao.png" type="image/png">
   <link rel="stylesheet" href="style.css">
+  <script src="index.js" defer></script>
   <title>Dayana Mariano</title>
 </head>
 <body>
@@ -61,6 +62,6 @@
       </a>
     </div>
   </div>
-  <footer>Desenvolvido por Dayana Mariano 2023</footer>
+  <footer id="footer"></footer>
 </body>
 </html>
