:sparkles: feat: Atualização tecnologias

--- a/index.html
+++ b/index.html
@@ -27,16 +27,52 @@
   </section>
   <div id="tecnologias">
     <h3>Tecnologias</h3>
-    <p>Tecnologias que já usei em meus projetos</p>
+    <p>Tecnologias e ferramentas que tenho experiência e uso em meus projetos</p>
     <div class="icones">
-      <img src="imagens/vscode-icons_file-type-html.svg" alt="HTML" class="icons">
-      <img src="imagens/vscode-icons_file-type-css.svg" alt="CSS" class="icons">
-      <img src="imagens/vscode-icons_file-type-js-official.svg" alt="JavaScript" class="icons">
-      <img src="imagens/logos_react.svg" alt="React" class="icons">
-      <img src="imagens/vscode-icons_file-type-vscode.svg" alt="VSCode" class="icons">
-      <img src="imagens/vscode-icons_file-type-tailwind.svg" alt="Tailwind" class="icons">
-      <img src="imagens/logos_git-icon.svg" alt="Git" class="icons">
-      <img src="imagens/akar-icons_github-fill.svg" alt="GitHub" class="icons">
+      <div class="skills">
+        <img src="imagens/vscode-icons_file-type-html.svg" alt="HTML" class="icons">
+        <span>HTML</span>
+      </div>
+      <div class="skills">
+        <img src="imagens/vscode-icons_file-type-css.svg" alt="CSS" class="icons">
+        <span>CSS</span>
+      </div>
+      <div class="skills">
+        <img src="imagens/vscode-icons_file-type-js-official.svg" alt="JavaScript" class="icons">
+        <span>JavaScript</span>
+      </div>
+      <div class="skills">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" class="icons" />
+        <span>TypeScript</span>
+      </div>
+      <div class="skills">
+        <img src="imagens/logos_react.svg" alt="React" class="icons">
+        <span>React</span>
+      </div>
+      <div class="skills">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original.svg" class="icons" />
+        <span>Next Js</span>
+      </div>
+      <div class="skills">
+        <img src="imagens/vscode-icons_file-type-vscode.svg" alt="VSCode" class="icons">
+        <span>VSCode</span>
+      </div>
+      <div class="skills">
+        <img src="imagens/logos_git-icon.svg" alt="Git" class="icons">
+        <span>Git</span>
+      </div>
+      <div class="skills">
+        <img src="imagens/akar-icons_github-fill.svg" alt="GitHub" class="icons">
+        <span>GitHub</span>
+      </div>
+      <div class="skills">
+        <img src="imagens/vscode-icons_file-type-tailwind.svg" alt="Tailwind" class="icons">
+        <span>Tailwind</span>
+      </div>
+      <div class="skills">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" class="icons"/>
+        <span>Figma</span>
+      </div>
     </div>
   </div>
   <div id="sobre">
