:sparkles: feat: Atualização tecnologias

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <span>Next Js</span>
       </div>
       <div class="skills">
-        <img src="imagens/vscode-icons_file-type-vscode.svg" alt="VSCode" class="icons">
-        <span>VSCode</span>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg" class="icons" />
+        <span>Vite</span>
       </div>
       <div class="skills">
-        <img src="imagens/logos_git-icon.svg" alt="Git" class="icons">
-        <span>Git</span>
+        <img src="imagens/vscode-icons_file-type-vscode.svg" alt="VSCode" class="icons">
+        <span>VSCode</span>
       </div>
       <div class="skills">
         <img src="imagens/akar-icons_github-fill.svg" alt="GitHub" class="icons">
