--- a/index.html
+++ b/index.html
@@ -84,6 +84,113 @@
       </p>
     </div>
   </div>
+  <div id="projetos">
+    <h3>Projetos</h3>
+    <p>Projetos recentes</p>
+    <div class="divProjetos">
+      <article class="card">
+        <div>
+          <h4>Código Certo</h4>
+          <p>Equipe de Desenvolvimento da Landing Page da organização Código Certo Coders</p>
+          <ul class="tags">
+            <li>#NextJS</li>
+            <li>#React </li>
+            <li>#Tailwind</li>
+            <li>#TrabalhoEmGrupo</li>
+            <li>#Kanban</li>
+            <li>#Figma</li>
+          </ul>
+        </div>
+        <img src="imagens/codigocerto.png" alt="" srcset="">
+      </article>
+      <article class="card cardReverse">
+        <div>
+          <h4>WaterDay</h4>
+          <p>Um projeto de calculadora de ingestão de água diária</p>
+          <ul class="tags">
+            <li>#NextJS</li>
+            <li>#React </li>
+            <li>#Tailwind</li>
+          </ul>
+        </div>
+        <img src="imagens/waterday.png" alt="" srcset="">
+      </article>
+      <article class="card">
+        <div>
+          <h4>Beauty Salon</h4>
+          <p>Landing Page de Salão de Beleza</p>
+          <ul class="tags">
+            <li>#HTML</li>
+            <li>#CSS </li>
+            <li>#SEO</li>
+          </ul>
+        </div>
+        <img src="imagens/beautysalon.png" alt="" srcset="">
+      </article>
+      <article class="card cardReverse">
+        <div>
+          <h4>PetLovers</h4>
+          <p>Página web de cadastro de pets</p>
+          <ul class="tags">
+            <li>#HTML</li>
+            <li>#CSS </li>
+            <li>#MockAPI</li>
+            <li>#Vercel</li>
+          </ul>
+        </div>
+        <img src="imagens/petlovers.png" alt="" srcset="">
+      </article>
+      <article class="card">
+        <div>
+          <h4>Churrascometro Certo</h4>
+          <p>Uma calcula a quantidade estimada de carne, pão de alho, refrigerante, água, carvão e cerveja</p>
+          <ul class="tags">
+            <li>#HTML</li>
+            <li>#CSS </li>
+            <li>#JavaScript</li>
+          </ul>
+        </div>
+        <img src="imagens/churrascometro.png" alt="" srcset="">
+      </article>
+      <article class="card cardReverse">
+        <div>
+          <h4>Banko</h4>
+          <p> Esta aplicação permite ao usuário criar cadastro, e fazer operações nas sua Conta Corrente e Conta Poupança</p>
+          <ul class="tags">
+            <li>#HTML</li>
+            <li>#CSS </li>
+            <li>#JavaScript</li>
+          </ul>
+        </div>
+        <img src="imagens/banko.png" alt="" srcset="">
+      </article>
+      <article class="card">
+        <div>
+          <h4>Loginha da Day</h4>
+          <p>Projeto de e-commerce consumindo uma API </p>
+          <ul class="tags">
+            <li>#React</li>
+            <li>#Shadcn/ui </li>
+            <li>#API</li>
+          </ul>
+        </div>
+        <img src="imagens/lojinha da day.png" alt="" srcset="">
+      </article>
+      <article class="card cardReverse">
+          <div>
+            <h4>Super Lista</h4>
+            <p>Aplicação de lista de compras com as funcionalidades CRUD (Create, Read, Update and Delete)</p>
+            <ul class="tags">
+              <li>#HTML</li>
+              <li>#CSS </li>
+              <li>#Responsivo</li>
+              <li>#JavaScript</li>
+            </ul>
+          </div>
+        <img src="imagens/superlista.jpeg" alt="" srcset="">
+      </article>
+    </div>
+  </div>
   <div id="contato">
     <h3>Contato</h3>
     <p>Quer saber mais? Visite minhas redes e entre em contato comigo</p>
