:sparkles: feat: Update projetos section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <li>#Figma</li>
           </ul>
         </div>
-        <img src="imagens/codigocerto.png" alt="" srcset="">
+        <img src="imagens/codigocerto.png" class="imgProjetos" alt="" srcset="">
       </article>
       <article class="card cardReverse">
         <div>
@@ -113,7 +113,7 @@
             <li>#Tailwind</li>
           </ul>
         </div>
-        <img src="imagens/waterday.png" alt="" srcset="">
+        <img src="imagens/waterday.png" class="imgProjetos" alt="" srcset="">
       </article>
       <article class="card">
         <div>
@@ -125,7 +125,7 @@
             <li>#SEO</li>
           </ul>
         </div>
-        <img src="imagens/beautysalon.png" alt="" srcset="">
+        <img src="imagens/beautysalon.png" class="imgProjetos"  alt="" srcset="">
       </article>
       <article class="card cardReverse">
         <div>
@@ -138,7 +138,7 @@
             <li>#Vercel</li>
           </ul>
         </div>
-        <img src="imagens/petlovers.png" alt="" srcset="">
+        <img src="imagens/petlovers.png" class="imgProjetos"  alt="" srcset="">
       </article>
       <article class="card">
         <div>
@@ -150,7 +150,7 @@
             <li>#JavaScript</li>
           </ul>
         </div>
-        <img src="imagens/churrascometro.png" alt="" srcset="">
+        <img src="imagens/churrascometro.png" class="imgProjetos"  alt="" srcset="">
       </article>
       <article class="card cardReverse">
         <div>
@@ -162,7 +162,7 @@
             <li>#JavaScript</li>
           </ul>
         </div>
-        <img src="imagens/banko.png" alt="" srcset="">
+        <img src="imagens/banko.png" class="imgProjetos"  alt="" srcset="">
       </article>
       <article class="card">
         <div>
@@ -174,7 +174,7 @@
             <li>#API</li>
           </ul>
         </div>
-        <img src="imagens/lojinha da day.png" alt="" srcset="">
+        <img src="imagens/lojinha da day.png" class="imgProjetos" alt="" srcset="">
       </article>
       <article class="card cardReverse">
           <div>
@@ -187,7 +187,7 @@
               <li>#JavaScript</li>
             </ul>
           </div>
-        <img src="imagens/superlista.jpeg" alt="" srcset="">
+        <img src="imagens/superlista.jpeg" class="imgProjetos" alt="" srcset="">
       </article>
     </div>
   </div>
