:sparkles: feat: Add link projetos

--- a/index.html
+++ b/index.html
@@ -90,102 +90,141 @@
     <div class="divProjetos">
       <article class="card">
         <div>
+          <h5>Projeto Profissional</h5>
           <h4>Código Certo</h4>
-          <p>Equipe de Desenvolvimento da Landing Page da organização Código Certo Coders</p>
           <ul class="tags">
             <li>#NextJS</li>
             <li>#React </li>
             <li>#Tailwind</li>
-            <li>#TrabalhoEmGrupo</li>
-            <li>#Kanban</li>
+            <li>#EmGrupo</li>
             <li>#Figma</li>
           </ul>
+          <p>Equipe de Desenvolvimento da Landing Page da organização Código Certo Coders</p>
+          <a class="linkProjetos target="_blank" href="https://github.com/day-mariano/equipe05">
+            <img src="imagens/link.png" alt="">
+            github
+          </a>
         </div>
         <img src="imagens/codigocerto.png" class="imgProjetos" alt="" srcset="">
       </article>
       <article class="card cardReverse">
         <div>
+          <h5>Projeto Pessoal</h5>
           <h4>WaterDay</h4>
-          <p>Um projeto de calculadora de ingestão de água diária</p>
           <ul class="tags">
             <li>#NextJS</li>
             <li>#React </li>
             <li>#Tailwind</li>
           </ul>
+          <p>Um projeto de calculadora de ingestão de água diária. Primeiro projeto em Next Js.</p>
+          <a class="linkProjetos" target="_blank" href="https://water-day.vercel.app">
+            <img src="imagens/link.png" alt="">
+            website
+          </a>
         </div>
         <img src="imagens/waterday.png" class="imgProjetos" alt="" srcset="">
       </article>
       <article class="card">
         <div>
+          <h5>Projeto Pessoal</h5>
           <h4>Beauty Salon</h4>
-          <p>Landing Page de Salão de Beleza</p>
           <ul class="tags">
             <li>#HTML</li>
             <li>#CSS </li>
             <li>#SEO</li>
           </ul>
+          <p>Landing Page de Salão de Beleza. Uma página com cabeçalho, rodapé, catalogo, tabela e formulário.</p>
+          <a class="linkProjetos" target="_blank" href="https://beautysalon-fawn.vercel.app">
+            <img src="imagens/link.png" alt="">
+            website
+          </a>
         </div>
         <img src="imagens/beautysalon.png" class="imgProjetos"  alt="" srcset="">
       </article>
       <article class="card cardReverse">
         <div>
+          <h5>Projeto Pessoal</h5>
           <h4>PetLovers</h4>
-          <p>Página web de cadastro de pets</p>
           <ul class="tags">
             <li>#HTML</li>
             <li>#CSS </li>
             <li>#MockAPI</li>
             <li>#Vercel</li>
           </ul>
+          <p>Página web de cadastro de pets. Desenvolvi para praticar método post na api de dados.</p>
+          <a class="linkProjetos" target="_blank" href="https://petlovers-nine.vercel.app">
+            <img src="imagens/link.png" alt="">
+            website
+          </a>
         </div>
         <img src="imagens/petlovers.png" class="imgProjetos"  alt="" srcset="">
       </article>
       <article class="card">
         <div>
+          <h5>Projeto Pessoal</h5>
           <h4>Churrascometro Certo</h4>
-          <p>Uma calcula a quantidade estimada de carne, pão de alho, refrigerante, água, carvão e cerveja</p>
           <ul class="tags">
             <li>#HTML</li>
             <li>#CSS </li>
             <li>#JavaScript</li>
           </ul>
+          <p>Uma calcula a quantidade estimada de carne, pão de alho, refrigerante, água, carvão e cerveja</p>
+          <a class="linkProjetos" target="_blank" href="https://churrascometro-calculadora.vercel.app">
+            <img src="imagens/link.png" alt="">
+            website
+          </a>
         </div>
-        <img src="imagens/churrascometro.png" class="imgProjetos"  alt="" srcset="">
+        <img src="imagens/churrascometro.png" class="imgProjetos" alt="" srcset="">
       </article>
       <article class="card cardReverse">
         <div>
+          <h5>Projeto Pessoal</h5>
           <h4>Banko</h4>
-          <p> Esta aplicação permite ao usuário criar cadastro, e fazer operações nas sua Conta Corrente e Conta Poupança</p>
           <ul class="tags">
             <li>#HTML</li>
             <li>#CSS </li>
             <li>#JavaScript</li>
           </ul>
+          <p> Esta aplicação permite ao usuário criar cadastro, e fazer operações nas sua Conta Corrente e Conta Poupança</p>
+          <a class="linkProjetos" target="_blank" href="https://banko-fintech.vercel.app/">
+            <img src="imagens/link.png" alt="">
+            website
+          </a>
         </div>
         <img src="imagens/banko.png" class="imgProjetos"  alt="" srcset="">
       </article>
       <article class="card">
         <div>
+          <h5>Projeto Pessoal</h5>
           <h4>Loginha da Day</h4>
-          <p>Projeto de e-commerce consumindo uma API </p>
           <ul class="tags">
             <li>#React</li>
             <li>#Shadcn/ui </li>
             <li>#API</li>
           </ul>
+          <p>Projeto de e-commerce consumindo uma API. Com listagem e detalhamento dos produtos</p>
+          <a class="linkProjetos" target="_blank" href="https://lojinha-da-day.vercel.app">
+            <img src="imagens/link.png" alt="">
+            website
+          </a>
         </div>
         <img src="imagens/lojinha da day.png" class="imgProjetos" alt="" srcset="">
       </article>
       <article class="card cardReverse">
           <div>
+            <h5>Projeto Pessoal</h5>
             <h4>Super Lista</h4>
-            <p>Aplicação de lista de compras com as funcionalidades CRUD (Create, Read, Update and Delete)</p>
             <ul class="tags">
               <li>#HTML</li>
               <li>#CSS </li>
               <li>#Responsivo</li>
               <li>#JavaScript</li>
             </ul>
+            <p>Aplicação de lista de compras com as funcionalidades CRUD (Create, Read, Update and Delete)</p>
+            <a class="linkProjetos" target="_blank" href="https://github.com/day-mariano/SuperListaWeb">
+              <img src="imagens/link.png" alt="">
+              github
+            </a>
           </div>
         <img src="imagens/superlista.jpeg" class="imgProjetos" alt="" srcset="">
       </article>
