:sparkles: feat: Update Sobre Mim

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="conteudoSobre">
       <img src="imagens/perfil.png" class="imgSobre">
       <p>
-        Desenvolvedora Front End em transição de carreira. Formada em Nutrição, atualmente fazendo a formação de Desenvolvimeto Front-end na Ada Tech. Esse curso já está impulsionando meus conhecimentos, <i>networking</i> e oportunidades. Enquanto meu primeiro sim não chega, aprimoro meus conhecimentos fazendo projetos pessoais para colocar em prática o que estudo, adquirir experiência, e enriquecer meu portfólio. Onde eu pratico HTML, CSS, JavaScript, consumo de API e React. Meus <i>hobbies</i> são patinação artistica, musculação, e fazer bolinhos ✨
+        Desenvolvedora de Software Front-end Junior autodidáta. Tenho conhecimentos adquiridos através de cursos e formação em Desenvolvimento Front End pela Ada Tech. Experiência adquirida através do trabalho voluntário na Código Certo Coders, e de meus projetos pessoais. Meus <i>hobbies</i> são musculação, patinação artística. ✨
       </p>
     </div>
   </div>
@@ -232,7 +232,7 @@
   </div>
   <div id="contato">
     <h3>Contato</h3>
-    <p>Quer saber mais? Visite minhas redes e entre em contato comigo</p>
+    <p>Quer saber mais? Visite minhas redes e entre em contato comigo!</p>
     <div class="WrapperButtonsContato">
       <a href="https://www.linkedin.com/in/dayana-mariano/" target="_blank" class="buttonContato">
         <img src="imagens/linkedin (1).png">
