:sparkles: feat: Update perfil image and about

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
       <a href="#tecnologias" class="navButtons">Tecnologias</a>
       <a href="#sobre" class="navButtons">Sobre mim</a>
       <a href="#contato" class="navButtons">Contato</a>
-      <a href="https://github.com/day-mariano?tab=repositories" target="_blank" class="buttonProjeto">Projetos</a>
+      <a href="#projetos" class="buttonProjeto">Projetos</a>
 
     </nav>
   </header>
   <section class="hero">
     <h2>Oi 👋, <br> meu nome é Dayana,<br> sou <strong>Desenvolvedora Front-end</strong> <br> e adoro criar coisas para a web</h2>
-    <img src="imagens/perfilfoto.jpg" alt="Dayana" id="fotoperfil" >
+    <img src="imagens/perfil2.jpg" alt="Dayana" id="fotoperfil" >
   </section>
   <div id="tecnologias">
     <h3>Tecnologias</h3>
-    <p>Tecnologias e ferramentas que tenho experiência e uso em meus projetos</p>
+    <p>Tecnologias e ferramentas que tenho experiência e uso em meus projetos:</p>
     <div class="icones">
       <div class="skills">
         <img src="imagens/vscode-icons_file-type-html.svg" alt="HTML" class="icons">
@@ -80,7 +80,7 @@
     <div class="conteudoSobre">
       <img src="imagens/perfil.png" class="imgSobre">
       <p>
-        Desenvolvedora de Software Front-end Junior autodidáta. Tenho conhecimentos adquiridos através de cursos e formação em Desenvolvimento Front End pela Ada Tech. Experiência adquirida através do trabalho voluntário na Código Certo Coders, e de meus projetos pessoais. Meus <i>hobbies</i> são musculação, patinação artística. ✨
+        Desenvolvedora de Software Front-end Junior. Tenho conhecimentos adquiridos através de diversos cursos, dentre eles, s formação em Desenvolvimento Front End pela Ada Tech. Experiência adquirida através dos meus projetos pessoais e trabalho voluntário na Código Certo Coders, trabalhando tanto <i>hards</i> como <i>softs skills</i> . Meus <i>hobbies</i> são musculação e patinação artística. ✨
       </p>
     </div>
   </div>
