:sparkles: feat: Update about

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="conteudoSobre">
       <img src="imagens/perfil.png" class="imgSobre">
       <p>
-        Desenvolvedora de Software Front-end Junior. Tenho conhecimentos adquiridos através de diversos cursos, dentre eles, s formação em Desenvolvimento Front End pela Ada Tech. Experiência adquirida através dos meus projetos pessoais e trabalho voluntário na Código Certo Coders, trabalhando tanto <i>hards</i> como <i>softs skills</i> . Meus <i>hobbies</i> são musculação e patinação artística. ✨
+        Desenvolvedora de Software Front-end Junior. Tenho conhecimentos adquiridos através de diversos cursos, dentre eles, a formação em Desenvolvimento Front End pela Ada Tech. Experiência adquirida através dos meus projetos pessoais e trabalho voluntário na Código Certo Coders, trabalhando tanto <i>hards</i> como <i>softs skills</i> . Meus <i>hobbies</i> são musculação e patinação artística. ✨
       </p>
     </div>
   </div>
